syntax = "proto3";

package authservice;

import "google/protobuf/empty.proto";

option go_package = "proto/authservice";

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message AuthRequest {
    string login = 1;
    string password = 2;
}

service AuthService {
    rpc UserRegister(RegisterRequest) returns (google.protobuf.Empty);
    rpc UserAuth(AuthRequest) returns (google.protobuf.Empty);
}